--- a/src/css/login.css
+++ b/src/css/login.css
@@ -3,6 +3,7 @@
   margin-right: auto;
   margin-left: auto;
   margin-top: 30vh;
+  z-index: 1;
   /*background-color: red;*/
 }
 /*
@@ -13,5 +14,34 @@
 
 .menuButton{
     height:40px;
-    width:100px;
+    width:10%;
+}
+
+.logoutButton{
+    position: absolute;
+    height: 50px;
+    margin-right: auto;
+    margin-left: 45%;
+    margin-top: 15vh;
+    z-index: 5;
+    background-color: rgba(32, 156, 232,0.3);
+    border-radius: 20px;
+    box-shadow: 5px 10px #888888;
+    border-style: hidden;
+}
+
+
+.loader{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  background-color: #e4ede6;
+  z-index: 1;
+}
+
+.spinBackground{
+  background-color: #e4ede6;
+  height: 100vh;
 }
