--- a/src/css/menubar.css
+++ b/src/css/menubar.css
@@ -23,7 +23,7 @@
 }
 
  /* The switch - the box around the slider */
-.switch {
+.switch, .excluder_switch {
   position: relative;
   display: inline-block;
   width: 40px;
@@ -35,6 +35,10 @@
   opacity: 0;
   width: 0;
   height: 0;
+}
+
+.excluder_switch{
+  width:  100px;
 }
 
 /* The slider */
